--- a/app/src/main/res/layout/layout_sign_in.xml
+++ b/app/src/main/res/layout/layout_sign_in.xml
@@ -35,7 +35,7 @@
             android:layout_height="wrap_content"
             android:background="@android:color/white"
             android:drawableLeft="@drawable/fui_ic_googleg_color_24dp"
-            android:text="Sign in with phone"
+            android:text="Sign in with Google"
             android:textColor="@android:color/black"/>
     </LinearLayout>
 
